# cpp-INFT2503

./: .gitignore  README.md
oving1/: a  a.cpp  b  b.cpp  temperatures.txt
oving10/: main.cpp
oving2/: task1  task1.cpp  task2.md  task3.md  task4  task4.cpp  task5  task5.cpp  task6  task6.cpp
oving3/: task1.cpp  task2.cpp  task3.cpp  task3.hpp  task4.cpp
oving4/: task1.cpp  task2.cpp
oving5/: task1.cpp  task2.cpp
oving6/: CMakeLists.txt  task1.cpp  task2.cpp
oving7/: CMakeLists.txt
oving7/1/: fraction.cpp  fraction.hpp  task1_b.md  task1a.cpp
oving7/2/: set.cpp  set.hpp  task2.cpp
oving8/: pair.cpp  task1.cpp
oving9/: oving9.cpp
